Updating main screen

--- a/ATDesktopWin/Views/HomeView.resx
+++ b/ATDesktopWin/Views/HomeView.resx
@@ -117,4 +117,32 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="menuMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACUe0wAnINEGIhzUOCIb
+        1GYiG9VZIxzUIDItygAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAR0i1ACIb1AAlHtIRIRrVih8Y
+        1+8fGNf+IBnW5SEa1ZkmH9MNAAAAAAAAAAAAAAAAAAAAAAAAAABfXZYAIhvVACkjzwYiHNQ5IBnWsB8Y
+        1/wfGNf8IBrWliMd1CglHtMVJyDSAgAAAAAAAAAAAAAAAAAAAAAnIdAALSjLAiIb1UsgGdatHxnX6x8Y
+        1/8fGNf/IBnWwSQe0xQjHdQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIx3UACQd1B8gGdbbHxjX/x8Y
+        1/8fGNf/HxjX9iEb1VQeF9gAMSzLAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB4X0wAeF9McHBXW2hwV
+        1/8dFtf/IhvX/yAa1qsmINEKJB7TAAAAAAAAAAAAAAAAAAAAAAAAAAAABQSrAOTi/ACGg90Zo6HoZXdz
+        5N5ybuP/k5Dp/2tn4vAcFdRAIRrWAD47xgAAAAAAAAAAAAAAAABaV8wA0M3/AISB4B6LiORomZbnx62r
+        6/2zse3/2dj1/+Lh+P9dWOC8AADICyYf0gAAAAAAAAAAAAAAAAAAAAAAiIXjAGxo3C2al+fOq6nr/7Wz
+        7v/Bv/D9y8ny/r278f9eWeH/IRrVgyIb3QAyLcsAAAAAAAAAAAAAAAAAAAAAAGRg2TSPjOSfp6Tqqa2r
+        6n+tq+ljkI3kaEI93OYnINj/HRbW/CEa1VQfGNYAAAAAAAAAAAAAAAAAAAAAAAAAAABMSNQqamfbHjw4
+        xQNcWN8AHBbRABwW0AweF9WjHxjX/R8Z1/EiHNQ2IhvVAAAAAAAAAAAAAAAAAAAAAAAAAAAAbm2zAIKA
+        xAAAAAAAAAAAAElCwQAhG9UAJB7TESEb1VshGtV5JB3UFiMd1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAP//AAD/wAAA/4AAAP4AAAD4BwAA+A8AAPgPAADwHwAAwB8AAIA/AAAAPwAAGD8AAHw/
+        AAD//wAA//8AAA==
+</value>
+  </data>
 </root>
