--- a/ATDesktopWin/Properties/Resources.resx
+++ b/ATDesktopWin/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="default_user_male" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\default-user-male.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="leaf" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\leaf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
